# AI-powered-Command-Terminal

./: .env  .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml  readme.md  requirements.txt
agent/: agent_core.py  dynamic_tools.py  tool_retriever.py
core/: command_parser.py  file_operations.py  nlp_processor.py  system_monitor.py
scripts/: ingest_tools.py
utils/: error_handler.py
